[package]
name = "immich-gpx"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive"] }
dotenv = "0.15.0"
gpx = "0.10.0"
itertools = "0.14.0"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
